--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -56,7 +56,7 @@
     .navbar a {
       float: left;
       display: block;
-      color: #f2f2f2;
+      color: #ffcc33;
       text-align: center;
       padding: 3vh 3vw;
       text-decoration: none;
