--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,6 +4,7 @@
         <a href="#theissue" class="smooth-scroll-top-navbar-offset">The Issue</a>
         <a href="#takeaction" class="smooth-scroll-top-navbar-offset">Our Ask</a>
         <a href="#spotlight" class="smooth-scroll-top-navbar-offset">Our Voices</a>
+        <a href="#pledge" class="smooth-scroll-top-navbar-offset">Pledge</a>
         <a href="#contact" class="smooth-scroll-top-navbar-offset">Contact Us</a>
     </div>
 </div>
