--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,9 +8,9 @@
         <a href="#contact" class="smooth-scroll-top-navbar-offset">Contact Us
         </a>
     </div>
-    <div class="social-media">
+    <!-- <div class="social-media">
         <a href="https://twitter.com/umnmen" target="_blank" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a>
         <a href="https://www.facebook.com/groups/634286233941618/" target="_blank" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a>
         <a href="https://www.instagram.com/savegophertf/" target="_blank" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a>
-    </div>
+    </div> -->
 </div>
